Fixed About Section Spacing

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -9,7 +9,7 @@
     width: 90%;
     align-self: center;
     height: 500px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 
 #aboutTitle {
@@ -20,6 +20,7 @@
     width: 90%;
     align-items: center;
     align-self: center;
+    margin-bottom: 20px;
 }
 
 #aboutTitle > span {
@@ -37,9 +38,9 @@
     margin-left: 130px;
     align-self:center;
     text-align: justify;
-    margin-top: 30px;
     font-size: 18px;
-    margin-bottom: 50px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     margin-right: 50px;
 }
 
